-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 11
-
Component/s: hotspot
-
b20
-
generic
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8206047 | 12 | Kim Barrett | P2 | Resolved | Fixed | team |
| JDK-8206642 | 11.0.1 | Kim Barrett | P2 | Resolved | Fixed | b01 |
The following tier1 test failed in a jdk/jdk CI job set:
gc/parallel/TestPrintGCDetailsVerbose.java
Here's a snippet from the hs_err_pid file:
# Internal Error (t:/workspace/open/src/hotspot/share/classfile/javaClasses.cpp:1479), pid=3196, tid=16372
# assert(oopDesc::equals(Universe::java_mirror(type), java_class)) failed: must be consistent
And here's the crashing thread's stack trace:
--------------- T H R E A D ---------------
Current thread (0x000000b85c99e800): GCTaskThread "ParGC Thread#1" [stack: 0x000000b85d2c0000,0x000000b85d3c0000] [id=16372]
Stack: [0x000000b85d2c0000,0x000000b85d3c0000]
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [jvm.dll+0xb91391] os::platform_print_native_stack+0xf1 (os_windows_x86.cpp:373)
V [jvm.dll+0xd88a5a] VMError::report+0xe6a (vmerror.cpp:696)
V [jvm.dll+0xd8a2f6] VMError::report_and_die+0x7d6 (vmerror.cpp:1433)
V [jvm.dll+0xd8aa24] VMError::report_and_die+0x64 (vmerror.cpp:1267)
V [jvm.dll+0x5b0cae] report_vm_error+0x7e (debug.cpp:233)
V [jvm.dll+0x7bf421] java_lang_Class::primitive_type+0x2d1 (javaclasses.cpp:1479)
V [jvm.dll+0x78386d] InstanceKlass::oop_print_value_on+0x18d (instanceklass.cpp:3269)
V [jvm.dll+0xb49274] DetectScavengeRoot::do_oop+0x1c4 (nmethod.cpp:1677)
V [jvm.dll+0xb4d9bc] nmethod::oops_do+0x2fc (nmethod.cpp:1578)
V [jvm.dll+0xb48fb1] nmethod::detect_scavenge_root_oops+0x31 (nmethod.cpp:1704)
V [jvm.dll+0x517806] CodeCache::scavenge_root_nmethods_do+0x266 (codecache.cpp:745)
V [jvm.dll+0xc11c94] ScavengeRootsTask::do_it+0x384 (pstasks.cpp:99)
V [jvm.dll+0x6fddc2] GCTaskThread::run+0x1d2 (gctaskthread.cpp:161)
V [jvm.dll+0xb8fb9e] thread_native_entry+0x11e (os_windows.cpp:456)
C [ucrtbase.DLL+0x1d885]
C [KERNEL32.DLL+0x13d2]
C [ntdll.dll+0x154f4]
This is a tier1 failure so the priority starts out at P2.
I can't find any older sightings in a CI build so I'm
tagging this as a promotion_blocker.
gc/parallel/TestPrintGCDetailsVerbose.java
Here's a snippet from the hs_err_pid file:
# Internal Error (t:/workspace/open/src/hotspot/share/classfile/javaClasses.cpp:1479), pid=3196, tid=16372
# assert(oopDesc::equals(Universe::java_mirror(type), java_class)) failed: must be consistent
And here's the crashing thread's stack trace:
--------------- T H R E A D ---------------
Current thread (0x000000b85c99e800): GCTaskThread "ParGC Thread#1" [stack: 0x000000b85d2c0000,0x000000b85d3c0000] [id=16372]
Stack: [0x000000b85d2c0000,0x000000b85d3c0000]
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [jvm.dll+0xb91391] os::platform_print_native_stack+0xf1 (os_windows_x86.cpp:373)
V [jvm.dll+0xd88a5a] VMError::report+0xe6a (vmerror.cpp:696)
V [jvm.dll+0xd8a2f6] VMError::report_and_die+0x7d6 (vmerror.cpp:1433)
V [jvm.dll+0xd8aa24] VMError::report_and_die+0x64 (vmerror.cpp:1267)
V [jvm.dll+0x5b0cae] report_vm_error+0x7e (debug.cpp:233)
V [jvm.dll+0x7bf421] java_lang_Class::primitive_type+0x2d1 (javaclasses.cpp:1479)
V [jvm.dll+0x78386d] InstanceKlass::oop_print_value_on+0x18d (instanceklass.cpp:3269)
V [jvm.dll+0xb49274] DetectScavengeRoot::do_oop+0x1c4 (nmethod.cpp:1677)
V [jvm.dll+0xb4d9bc] nmethod::oops_do+0x2fc (nmethod.cpp:1578)
V [jvm.dll+0xb48fb1] nmethod::detect_scavenge_root_oops+0x31 (nmethod.cpp:1704)
V [jvm.dll+0x517806] CodeCache::scavenge_root_nmethods_do+0x266 (codecache.cpp:745)
V [jvm.dll+0xc11c94] ScavengeRootsTask::do_it+0x384 (pstasks.cpp:99)
V [jvm.dll+0x6fddc2] GCTaskThread::run+0x1d2 (gctaskthread.cpp:161)
V [jvm.dll+0xb8fb9e] thread_native_entry+0x11e (os_windows.cpp:456)
C [ucrtbase.DLL+0x1d885]
C [KERNEL32.DLL+0x13d2]
C [ntdll.dll+0x154f4]
This is a tier1 failure so the priority starts out at P2.
I can't find any older sightings in a CI build so I'm
tagging this as a promotion_blocker.
- backported by
-
JDK-8206047 parallel/TestPrintGCDetailsVerbose.java fails assertion
-
- Resolved
-
-
JDK-8206642 parallel/TestPrintGCDetailsVerbose.java fails assertion
-
- Resolved
-
- duplicates
-
JDK-8205527 RedefineRunningMethods.java failed assertion
-
- Closed
-
- relates to
-
JDK-8203837 Split nmethod unloading from inline cache cleaning
-
- Resolved
-