8205577: parallel/TestPrintGCDetailsVerbose.java fails assertion

Remove unsafe printing.

Reviewed-by: dholmes, tschatzl, dcubed, coleenp